<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Core App Strings -->
    <string name="app_name">Rita Foodland</string> <!-- Prioritized from new file -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Login/Registration Strings -->
    <string name="login_screen_title">Welcome to Rita Foodland</string>
    <string name="enter_mobile_number_hint">Enter Mobile Number (e.g., +91XXXXXXXXXX)</string> <!-- From existing -->
    <string name="send_otp">Send OTP</string>
    <string name="enter_otp_hint">Enter OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="new_user_greeting">Just a few more details for your first order!</string> <!-- From existing -->
    <string name="enter_your_name">Enter Your Name</string> <!-- From existing -->
    <string name="enter_your_address">Enter Your Address</string> <!-- From existing -->
    <string name="use_current_location">Use Current Location</string>
    <string name="complete_registration">Complete Registration</string>

    <!-- Menu Activity New UI Strings -->
    <string name="search_dishes_hint">Search for dishes</string>
    <string name="list_of_category">List of category</string>
    <string name="bestsellers">Bestsellers</string>

    <!-- Navigation Drawer Menu Item Titles (needed for activity_main_drawer.xml) -->
    <string name="menu_home">Home</string>
    <string name="menu_restaurant_info">Restaurant Info</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>

    <!-- Restaurant Info strings (for contentDescription, other text) -->
    <string name="restaurant_banner_image">Restaurant Banner</string>
    <string name="restaurant_image_desc">Restaurant Image</string>
    <string name="restaurant_logo_desc">Restaurant Logo</string>
    <string name="menu_item_image">Menu Item Image</string>
    <string name="restaurant_image_description">Image of the restaurant</string>
    <!-- General UI texts -->
    <string name="loading">Loading...</string>
    <string name="error_message_default">Something went wrong.</string>

    <string name="profile_icon_description">Open user profile</string>
    <string name="delivering_to">DELIVERING TO</string>
    <string name="menu_icon_description">Open navigation menu</string>
    <string name="menu_item_image_description">Image of the menu item</string>


</resources>