<!-- PATH: app/src/main/res/menu/nav_menu.xml -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!--
        Group for the main navigation items.
        'android:checkableBehavior="single"' means only one item
        in this group can be highlighted as "selected" at a time.
    -->
    <group android:id="@+id/group_main_navigation" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_restaurant_info"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_restaurant_info" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_cart_add"
            android:title="@string/menu_cart" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_menu_orders"
            android:title="@string/menu_orders" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />
    </group>

    <!--
        A separate group for the logout action.
        This provides a visual separator (a faint line by default)
        and allows different behavior (e.g., 'checkableBehavior="none"').
    -->
    <group android:id="@+id/group_system_actions" android:checkableBehavior="none">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_logout" />
    </group>

</menu>
